--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-env
-__pycache__/
+env/
+*.egg-info
+*.pot
+*.py[co]
+.tox/
+__pycache__
+MANIFEST
+dist/
+docs/_build/
+docs/locale/
+node_modules/
+tests/coverage_html/
+tests/.coverage
+build/
+tests/report/
