--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ django-cors-headers==3.12.0
 django-filter==21.1
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
 Markdown==3.3.7
 Pillow==9.1.1
 pytz==2022.1
 sqlparse==0.4.2
 tzdata==2022.1
+whitenoise==6.2.0
