--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.13.1
 gunicorn==20.1.0
 Markdown==3.3.7
 Pillow==9.1.1
+psycopg2==2.9.3
 pytz==2022.1
 sqlparse==0.4.2
 tzdata==2022.1
